<resources>
    <string name="app_name">SmartStegno</string>
    <string name="smartstegno">SmartStegno</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password1">password</string>
    <string name="username">UserName</string>
    <string name="welcome">Welcome!</string>
    <string name="register_here">Register Here</string>
    <string name="decode">Decode</string>
    <string name="encode">Encode</string>
    <string name="smartstegno_homepage">SmartStegno HomePage</string>
    <string name="your_message">Message</string>
    <string name="enter_secret_key">Enter Secrest Key</string>
    <string name="message">Message</string>
    <string name="secret_key">Secret Key</string>

        <string name="aboutustag">About us</string>
        <string name="infotag">Guide for you</string>
        <string name="aboutus">
        Thank you for choosing SMARTSTEGENO..!!\n\n

        Following are the terms of on which we operate :-\n
        i. We do not take any of your private media accept the image you select\n
        ii. We dont offer any fees for the hiding of message.\n
        iii.Preserve original image.\n
        iv.No complexity in data hiding.\n
        v. Communication through this app is fully secured.\n
        \n Continue the use without any worries..!!
    </string>
        <string name="info">HEY SmartUser..!!\n\n\n
        Follow the guide given for fluent use of application :-\n\n
        For encoding:\n
        Step 1:\t   Make a secret key :-\n
                 Give your key and encrypt it using the application so that none can guess it and total security of your message is guaranteed!!\n
        Step 2:\t   Lets start with encoding :-\n
                Choose the image where you would like to conceal message\n
                Enter your secret message and the encrypted key and hit encode \n
                Give your few precious moment so that SMARTSTEGENO would conceal the message\n
                Finally, save the encoded image.\n\n\n
        For sharing :-\n
                Enter email id and the encrypted key of the receiver and hit share\n\n\n
        For decoding :-\n
          Step 1:   Get your original key :-\n
                Firstly, enter the encrypted key you received from sender.\n
                Hit, decrpyt key so that you would get original key.\n
          Step 2:   Lets start with decoding :-\n
                Goto decode section and choose the image given by sender and enter secret key hit decode.\n
                Ta-DA..!! You  will get the message sender wants to send you.\n
        You may proceed to communicate without any queries..!!

    </string>

</resources>